--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Kurmanzhan999.github.io/planet-galaxy",
+  "homepage": "http://Kurmanzhan999.github.io/planetGalaxy",
   "name": "new-life",
   "version": "0.1.0",
   "private": true,
